# openid-demo-rust

./: .gitignore  Cargo.toml  README.MD  TODO.MD  openssl-commands.md  public-key-from-components.pem  test-keypair.pem  test-private-key.der  test-private-key.pkcs8  test-private-keypair-for-signature.pk8  test-public-key.der
src/: api.rs  credentials.rs  jwt.rs  lib.rs  main.rs  meta.rs  request.rs  response.rs
src/service/: user.rs
