[package]
name = "openid"
version = "0.1.0"
edition = "2018"
default-run = "oidclient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oidclient"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
reqwest = "0.11.4"
url = "2.2.2"
rand = { version = "0.8.4", features = ["std", "std_rng"] }
rocket = "0.5.0-rc.1"
# My derive macro
to-url = {path = "../to-url"}
