[package]
name = "openid"
version = "0.1.0"
edition = "2018"
default-run = "oidclient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oidclient"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
url = "2.2.2"
rand = { version = "0.8.4", features = ["std", "std_rng"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
base64 = "0.13.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
time = {version = "0.3.5", features = ["serde"] }
ring = "0.16.20"
simple_asn1 = "0.6.1"
# My derive macro
to-url = {path = "../to-url"}
